Start IPI support

--- a/bench/Makefile
+++ b/bench/Makefile
@@ -2,7 +2,7 @@ CC	:= gcc
 CFLAGS	:= -Wall -g -MD -O3 -I../
 LDFLAGS := -ldune -lpthread
 
-bench_files := bench_dune bench_dune_ring bench_linux
+bench_files := bench_dune bench_dune_ring bench_linux posted_ipi
 
 all: $(bench_files)
 
@@ -14,6 +14,9 @@ bench_dune_ring: bench_dune_ring.o ../libdune/libdune.a
 
 bench_linux: bench_linux.o
 	$(CC) $(CFLAGS) $(<) -o $(@)
+
+posted_ipi: posted_ipi.o ../libdune/libdune.a
+	  $(CC) $(CFLAGS) -static $(<) -L../libdune $(LDFLAGS) -o $(@)
 
 clean:
 	rm -f *.o test *.d $(bench_files)
