--- a/libdune/Makefile
+++ b/libdune/Makefile
@@ -1,7 +1,7 @@
 CC      = gcc
 CFLAGS  = -Wall -g -O3 -MD
 LDFLAGS = -static -L. -ldune
-OBJ     = entry.o dune.o vsyscall.o elf.o vm.o util.o page.o procmap.o debug.o
+OBJ     = entry.o dune.o vsyscall.o elf.o vm.o util.o page.o procmap.o debug.o apic.o
 NOFPU_OBJ = trap.o
 
 $(NOFPU_OBJ): EXTRA_FLAGS := -mno-sse -mno-mmx -mno-sse2 -mno-3dnow -msoft-float
